@@ -401,6 +401,8 @@ body {
 
 <p><strong>drop_radius</strong> | <code>int</code> | The distance (in tiles) away from the origin that loot can drop</p>
 
+<p><strong>hide_radius</strong> | <code>float</code> | If an entity is within this radius relative to a piece of loot, the label will be hidden unless highlighted with the cursor.</p>
+
 <hr />
 
 <h4>EngineSettings: Tileset config</h4>
